home页面添加轮播标题内容 添加合作伙伴锚点 about页面删除底部内容在点击左边公司简介和奥维生态右边的切换 news增加top新闻列表 添加products的多个锚点

--- a/ProductPlan2.html
+++ b/ProductPlan2.html
@@ -6,6 +6,7 @@
 		<title>ALLWAY-Product2</title>
 		<link rel="stylesheet" type="text/css" href="css/ProductPlan2.css">
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
+		<link rel="stylesheet" type="text/css" href="css/swiper.min.inner.css"/>
 	</head>
 
 	<body>
@@ -40,20 +41,28 @@
 							</a>
 						</li>
 						<li>
-							<p>方案概述</p>
-							<p>Solution Overview</p>
+							<a href="ProductPlan.html#Overview">
+								<p>方案概述</p>
+								<p>Solution Overview</p>
+							</a>
 						</li>
 						<li>
-							<p>方案特性</p>
-							<p>Solution Feature</p>
+							<a href="ProductPlan.html#Feature">
+								<p>方案特性</p>
+								<p>Solution Feature</p>
+							</a>
 						</li>
 						<li>
-							<p>应用场景</p>
-							<p>Application Scenario</p>
+							<a href="ProductPlan.html#Application">
+								<p>应用场景</p>
+								<p>Application Scenario</p>
+							</a>
 						</li>
 						<li>
-							<p>行业案例</p>
-							<p>Industry Case</p>
+							<a href="ProductPlan.html#Industry">
+								<p>行业案例</p>
+								<p>Industry Case</p>
+							</a>
 						</li>
 						<li class="menu-acticve">
 							<a href="ProductPlan2.html">
@@ -63,31 +72,39 @@
 							</a>
 						</li>
 						<li>
-							<p>方案概述</p>
-							<p>Solution Overview</p>
+							<a href="#Overview2">
+								<p>方案概述</p>
+								<p>Solution Overview</p>
+							</a>
 						</li>
 						<li>
-							<p>方案特性</p>
-							<p>Solution Feature</p>
+							<a href="#Feature2">
+								<p>方案特性</p>
+								<p>Solution Feature</p>
+							</a>
 						</li>
 						<li>
-							<p>应用场景</p>
-							<p>Application Scenario</p>
+							<a href="#Application2">
+								<p>应用场景</p>
+								<p>Application Scenario</p>
+							</a>
 						</li>
 						<li>
-							<p>行业案例</p>
-							<p>Industry Case</p>
+							<a href="#Industry2">
+								<p>行业案例</p>
+								<p>Industry Case</p>
+							</a>
 						</li>
 					</ul>
 				</div>
 				<div class="top-content right">
 					<ul class="firstul">
-						<li>
+						<li id="Overview2">
 							<p class="xzhongwen">方案概述</p>
 							<p class="xyingwen">Solution Overview</p>
 							<div class="gaishu">公司基于数梦工场业务能力和企业转型难题构建的技术框架，帮助企业更灵活的构建和扩展其业务，打破数据孤岛，构建数据化运营体系，助力传统企业快速向互联网+转型。</div>
 						</li>
-						<li>
+						<li id="Feature2">
 							<p class="xzhongwen">方案特性</p>
 							<p class="xyingwen">Solution Feature</p>
 						</li>
@@ -128,7 +145,7 @@
 						<img src="img/producta.png"/>
 					</div>
 					<div class="bottom-txt">
-						<ul class="big-title">
+						<ul class="big-title" id="Application2">
 							<li>
 								<p class="zhongwen">应用场景</p>
 								<p class="yingwen">Application Scenario</p>
@@ -138,17 +155,76 @@
 							<dd>新零售解决方案帮助传统零售行业客户解决业务离线、消费者行为和系统数据割裂的困局，方案的核心理念：业务在线化（数据化），数据业务化。</dd>
 							<dd>通过全渠道电子商务，一方面捕捉并记录消费者的浏览、购买、支付、位置和社交行为等信息，另一方面，通过垂直整合价格链上的行业应用，将原先的线下业务过程在线化（数据化）。同时，通过引入探针等技术手段辅助进行线下数据采集，实现线上线下数据相融合。通过引入第三方数据服务来丰富零售行业客户的数据维度，在大数据中心进行数据建模及算法分析得到客户画像，为零售行业客户在进行营销活动时提供数据支撑，实现数据反哺业务应用、数据资产的价值化。持续的数据化运营帮助零售行业客户实现改善用户购物体验、提高用户活跃度、提升品牌认知度以及提高销售额及利润率的最终目标。</dd>
 						</dl>
-						<ul class="big-title2">
+						<ul class="big-title2" id="Industry2">
 							<li>
-								<p class="zhongwen">应用场景</p>
-								<p class="yingwen">Application Scenario</p>
+								<p class="zhongwen">行业案例</p>
+								<p class="yingwen">Industry Case</p>
 							</li>
 						</ul>
+						<div class="swiper-container swiper-container-horizontal">
+							<div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px); ">
+								<div class="bottom-Article swiper-slide swiper-slide-active">
+									<div>领客汽车1</div>
+									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+								</div>
+								<div class="bottom-Article swiper-slide swiper-slide-next">
+									<div>领客汽车2</div>
+									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+								</div>
+								<div class="bottom-Article swiper-slide">
+									<div>领客汽车3</div>
+									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+								</div>
+								<div class="bottom-Article swiper-slide">
+									<div>领客汽车4</div>
+									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+								</div>
+								<div class="bottom-Article swiper-slide">
+									<div>领客汽车5</div>
+									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+								</div>
+							</div>
+						</div>
+						
+						
 					</div>
 				</div>
 			</div>
 			<!-- 底部部分 -->
 		</div>
+		
+		
+		<script src="js/jquery-2.1.0.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/swiper.min.inner.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript">
+			var swiper = new Swiper('.swiper-container', {
+				spaceBetween: 30,
+				centeredSlides: true,
+				autoplay: {
+					//这个时间是动画切换的时间
+					delay: 2000,
+					disableOnInteraction: false,
+				},
+				pagination: {
+					el: '.swiper-pagination',
+					clickable: true,
+				},
+				navigation: {
+					nextEl: '.swiper-button-next',
+					prevEl: '.swiper-button-prev',
+				},
+			});
+		</script>
 	</body>
 
 </html>
