--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/AboutMe.css">
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" type="text/css" href="css/iconfont.css" />
-		
+
 	</head>
 
 	<body>
@@ -27,124 +27,155 @@
 			<!-- logo搜索 -->
 			<!-- 顶部 -->
 			<div class="top-area-content lo-ss clear">
+				<div class="content-img clear"><img src="img/aboutbg.png" /></div>
 				<div class="content-menu">
 					<ul class="big-menu">
 						<li>
 							<p class="zhongwen">关于我们</p>
 							<p class="yingwen">About Us</p>
 						</li>
-						<li class="menu-acticve">
+						<li class="menu-acticve Company">
 							<p class="titlep">企业简介</p>
 							<p class="titley">Company Profile</p>
 							<span></span>
 						</li>
-						<li class="menu-acticve">
+						<li class="menu-acticve Allway">
 							<p class="titlep">奥维生态</p>
 							<p class="titley">Allway Ecology</p>
 							<span></span>
 						</li>
-						<li>
-							<p>奥维数据</p>
-							<p>Allway Data</p>
+						<li class="xiaop">
+							<a href="#">
+								<p>奥维数据</p>
+								<p>Allway Data</p>
+							</a>
 						</li>
-						<li>
-							<p>数梦起乘</p>
-							<p>GtDream Investment</p>
+						<li class="xiaop">
+							<a href="#">
+								<p>数梦起乘</p>
+								<p>GtDream Investment</p>
+							</a>
 						</li>
-						<li>
-							<p>物产中大数据</p>
-							<p>Wuchan Zhongda Data</p>
+						<li class="xiaop">
+							<a href="#">
+								<p>物产中大数据</p>
+								<p>Wuchan Zhongda Data</p>
+							</a>
 						</li>
-						<li>
-							<p>衢时代</p>
-							<p>Qu Shi Dai Data</p>
+						<li class="xiaop">
+							<a href="#">
+								<p>衢时代</p>
+								<p>Qu Shi Dai Data</p>
+							</a>
 						</li>
-						<li>
-							<p>行业数据深度应用平台</p>
-							<p>Industry Data Application Platform</p>
+						<li class="xiaop">
+							<a href="#">
+								<p>行业数据深度应用平台</p>
+								<p>Industry Data Application Platform</p>
+							</a>
 						</li>
 					</ul>
 				</div>
 				<div class="content-about">
-					<ul class="content-about-me">
+					<div id="Company">
+						<ul class="content-about-me">
+							<li>
+								<p><span>13</span>项</p>
+								<p>软件著作权登记证书13项</p>
+							</li>
+							<li>
+								<p><span>12</span>项</p>
+								<p>软件产品登记证书12项</p>
+							</li>
+							<li>
+								<p><span>1</span>项</p>
+								<p>数码成像档案仪专利1项</p>
+							</li>
+						</ul>
+						<div class="jianjie">
+							<p>浙江奥维数据技术有限公司，企业定位为政务大数据运营服务商，多年来从事政务数据服务，为上百个城市提供大数据系统建设运营，目前联合阿里云以及数梦工场，承接政务网、雪亮工程等政府项目的整体融资安排、规划集成建设以及后续综合运维等落地工作。</p>
+							<p>公司拥有软件企业认定证书，测绘资质丙级证书，并通过IOS 9001：2008质量管理体系认证，CMM13级评估。在自主知识产权当面，以取得软件著作权登记书13项，软件产品登记证书12项，并获得数码成像档案仪专利1项。</p>
+						</div>
+					</div>
+					<ul class="bottom-menu clear" id="Allway">
 						<li>
-							<p><span>13</span>项</p>
-							<p>软件著作权登记证书13项</p>
+							<i class="iconfont">&#58882;</i>
+							<p class="titlep">奥维数据</p>
+							<p class="titley">Allway Data</p>
+							<span>这件衢州时代大数据科技有限公司是一家基于阿里巴巴和衢州市政府签订战略合作协议下的SPV落地公司，公司注册资本为5000万，控股股东为奥维数据公司，数梦工场参股，经营业务主要为大数据、云计算软硬件的技术开发和监控设备的安装维护等。目前，该公司主要承接我市“雪亮工程”项目建设和运维，在此基础上搭建了衢州市“城市数据大脑”。</span>
+
 						</li>
 						<li>
-							<p><span>12</span>项</p>
-							<p>软件产品登记证书12项</p>
+							<i class="iconfont">&#58938;</i>
+							<p class="titlep">数梦起乘</p>
+							<p class="titley">GtDream Investment</p>
+							<span>数梦起乘大数据产业基金是由浙江奥维数据技术有限公司和杭州数梦工场科技有限公司共同发起设立，该基金主要围绕大数据产业链进行深度投资，利用数梦工场在大数据领域的领先技术和奥维数据的融资能力以及社会资源关系，运用产融模式快速打造政务大数据平台，形成大数据产业集群，成为中国数字经济的产融服务领导者，通过IPO,并购，股权转让等方式实现基金退出。</span>
 						</li>
 						<li>
-							<p><span>1</span>项</p>
-							<p>数码成像档案仪专利1项</p>
+							<i class="iconfont">&#58913;</i>
+							<p class="titlep">物产中大数据</p>
+							<p class="titley">Wuchan Zhongda Data</p>
+							<span>这件衢州时代大数据科技有限公司是一家基于阿里巴巴和衢州市政府签订战略合作协议下的SPV落地公司，公司注册资本为5000万，控股股东为奥维数据公司，数梦工场参股，经营业务主要为大数据、云计算软硬件的技术开发和监控设备的安装维护等。目前，该公司主要承接我市“雪亮工程”项目建设和运维，在此基础上搭建了衢州市“城市数据大脑”。</span>
+						</li>
+						<li>
+							<i class="iconfont">&#59349;</i>
+							<p class="titlep">衢时代</p>
+							<p class="titley">Qu Shi Dai Data</p>
+							<span>这件衢州时代大数据科技有限公司是一家基于阿里巴巴和衢州市政府签订战略合作协议下的SPV落地公司，公司注册资本为5000万，控股股东为奥维数据公司，数梦工场参股，经营业务主要为大数据、云计算软硬件的技术开发和监控设备的安装维护等。目前，该公司主要承接我市“雪亮工程”项目建设和运维，在此基础上搭建了衢州市“城市数据大脑”。</span>
+						</li>
+						<li>
+							<i class="iconfont">&#58942;</i>
+							<p class="titlep">行业数据深度应用平台</p>
+							<p class="titley">Industry Data Application Platform</p>
+							<span>数梦起乘大数据产业基金是由浙江奥维数据技术有限公司和杭州数梦工场科技有限公司共同发起设立，该基金主要围绕大数据产业链进行深度投资，利用数梦工场在大数据领域的领先技术和奥维数据的融资能力以及社会资源关系，运用产融模式快速打造政务大数据平台，形成大数据产业集群，成为中国数字经济的产融服务领导者，通过IPO,并购，股权转让等方式实现基金退出。</span>
 						</li>
 					</ul>
-					<div class="jianjie">
-						<p>浙江奥维数据技术有限公司，企业定位为政务大数据运营服务商，多年来从事政务数据服务，为上百个城市提供大数据系统建设运营，目前联合阿里云以及数梦工场，承接政务网、雪亮工程等政府项目的整体融资安排、规划集成建设以及后续综合运维等落地工作。</p>
-						<p>公司拥有软件企业认定证书，测绘资质丙级证书，并通过IOS 9001：2008质量管理体系认证，CMM13级评估。在自主知识产权当面，以取得软件著作权登记书13项，软件产品登记证书12项，并获得数码成像档案仪专利1项。</p>
-					</div>
 				</div>
-				<div class="content-img clear"><img src="img/aboutbg.png" /></div>
+				<div class="yun">
+					<img src="img/yun.png" />
+				</div>
+
 			</div>
 			<!-- 顶部 -->
 			<!-- 底部 -->
 			<div class="lo-ss bottom-area ">
-				<div class="bgceng"><img src="img/bgceng.jpg" /></div>
+				<!--<div class="bgceng"><img src="img/bgceng.jpg" /></div>-->
 				<div class="bottom-area-title clear">
-					<ul class="title left">
-						<li>
-							<p class="zhongwen">关于我们</p>
-							<p class="yingwen">About Us</p>
-						</li>
-						<li class="menu-acticve">
-							<p class="titlep">企业简介</p>
-							<p class="titley">Company Profile</p>
-							<span></span>
-						</li>
-						<li class="menu-acticve">
-							<p class="titlep">奥维生态</p>
-							<p class="titley">Allway Ecology</p>
-							<span></span>
-						</li>
-					</ul>
-					<div class="logo-yun right">
-						<img src="img/yun.png" />
-						<ul class="bottom-menu right clear">
-							<li>
-								<i class="iconfont">&#58882;</i>
-								<p class="titlep">奥维数据</p>
-								<p class="titley">Allway Data</p>
-							</li>
-							<li>
-								<i class="iconfont">&#58938;</i>
-								<p class="titlep">数梦起乘</p>
-								<p class="titley">GtDream Investment</p>
-								<span>数梦起乘大数据产业基金是由浙江奥维数据技术有限公司和杭州数梦工场科技有限公司共同发起设立，该基金主要围绕大数据产业链进行深度投资，利用数梦工场在大数据领域的领先技术和奥维数据的融资能力以及社会资源关系，运用产融模式快速打造政务大数据平台，形成大数据产业集群，成为中国数字经济的产融服务领导者，通过IPO,并购，股权转让等方式实现基金退出。</span>
-							</li>
-							<li>
-								<i class="iconfont">&#58913;</i>
-								<p class="titlep">物产中大数据</p>
-								<p class="titley">Wuchan Zhongda Data</p>
-							</li>
-							<li>
-								<i class="iconfont">&#59349;</i>
-								<p class="titlep">衢时代</p>
-								<p class="titley">Qu Shi Dai Data</p>
-								<span>这件衢州时代大数据科技有限公司是一家基于阿里巴巴和衢州市政府签订战略合作协议下的SPV落地公司，公司注册资本为5000万，控股股东为奥维数据公司，数梦工场参股，经营业务主要为大数据、云计算软硬件的技术开发和监控设备的安装维护等。目前，该公司主要承接我市“雪亮工程”项目建设和运维，在此基础上搭建了衢州市“城市数据大脑”。</span>
-							</li>
-							<li>
-								<i class="iconfont">&#58942;</i>
-								<p class="titlep">行业数据深度应用平台</p>
-								<p class="titley">Industry Data Application Platform</p>
-							</li>
-						</ul>
-					</div>
 				</div>
 			</div>
 			<!-- 底部 -->
 		</div>
-		<!-- 导航 -->
+		<script src="js/jquery-2.1.0.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript">
+			window.onload = function() {
+				
+				//点击Company右边背景和内容的切换
+				$(".Company").on("click", function() {
+					$(".content-img img").attr('src', 'img/aboutbg.png');
+					$(".content-img img").css('height', '645px');
+					$(".yun").css('display', 'none');
+					$("#Allway").hide();
+					$("#Company").show();
+				})
+				//点击Allway右边背景和内容的切换
+				$(".Allway").on("click", function() {
+					$(".content-img img").attr('src', 'img/bgceng.jpg');
+					$(".content-img img").css('height', '785px');
+					$(".yun").css('display', 'block');
+					$("#Allway").show();
+					$("#Company").hide();
+				})
+				//点击xiaop右边背景和内容的切换
+				$(".xiaop").on("click", function() {
+					$(".content-img img").attr('src', 'img/bgceng.jpg');
+					$(".content-img img").css('height', '785px');
+					$(".yun").css('display', 'block');
+					$("#Allway").show();
+					$("#Company").hide();
+				})
+
+			}
+		</script>
 	</body>
 
 </html>
