--- a/ProductPlan.html
+++ b/ProductPlan.html
@@ -6,6 +6,7 @@
 		<title>ALLWAY-Product</title>
 		<link rel="stylesheet" type="text/css" href="css/ProductPlan.css">
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
+		<link rel="stylesheet" type="text/css" href="css/swiper.min.inner.css" />
 	</head>
 
 	<body>
@@ -40,20 +41,28 @@
 							</a>
 						</li>
 						<li>
-							<p>方案概述</p>
-							<p>Solution Overview</p>
+							<a href="#Overview">
+								<p>方案概述</p>
+								<p>Solution Overview</p>
+							</a>
 						</li>
 						<li>
-							<p>方案特性</p>
-							<p>Solution Feature</p>
+							<a href="#Feature">
+								<p>方案特性</p>
+								<p>Solution Feature</p>
+							</a>
 						</li>
 						<li>
-							<p>应用场景</p>
-							<p>Application Scenario</p>
+							<a href="#Application">
+								<p>应用场景</p>
+								<p>Application Scenario</p>
+							</a>
 						</li>
 						<li>
-							<p>行业案例</p>
-							<p>Industry Case</p>
+							<a href="#Industry">
+								<p>行业案例</p>
+								<p>Industry Case</p>
+							</a>
 						</li>
 						<li class="menu-acticve">
 							<a href="ProductPlan2.html">
@@ -63,31 +72,39 @@
 							</a>
 						</li>
 						<li>
-							<p>方案概述</p>
-							<p>Solution Overview</p>
+							<a href="ProductPlan2.html#Overview2">
+								<p>方案概述</p>
+								<p>Solution Overview</p>
+							</a>
 						</li>
 						<li>
-							<p>方案特性</p>
-							<p>Solution Feature</p>
+							<a href="ProductPlan2.html#Feature2">
+								<p>方案特性</p>
+								<p>Solution Feature</p>
+							</a>
 						</li>
 						<li>
-							<p>应用场景</p>
-							<p>Application Scenario</p>
+							<a href="ProductPlan2.html#Application2">
+								<p>应用场景</p>
+								<p>Application Scenario</p>
+							</a>
 						</li>
 						<li>
-							<p>行业案例</p>
-							<p>Industry Case</p>
+							<a href="ProductPlan2.html#Industry2">
+								<p>行业案例</p>
+								<p>Industry Case</p>
+							</a>
 						</li>
 					</ul>
 				</div>
 				<div class="top-content right">
 					<ul class="firstul">
-						<li>
+						<li id="Overview">
 							<p class="xzhongwen">方案概述</p>
 							<p class="xyingwen">Solution Overview</p>
 							<div class="gaishu">公司以阿里云为基础，以数梦工场为技术核心，将互联网的能力与政务进行创新融合，在流程优化的基础上，引入以资源集约共享、弹性伸缩、极致体验、敏捷支撑为特征的互联网技术及配套产业基金，从而实现政务便民服务、政务管理与辅助决策以及产业支持等精细化政务体系。</div>
 						</li>
-						<li>
+						<li id="Feature">
 							<p class="xzhongwen">方案特性</p>
 							<p class="xyingwen">Solution Feature</p>
 						</li>
@@ -121,7 +138,7 @@
 				<div class="bottom-logo">
 					<a href="Home.html">ALLWAY DATA</a>
 				</div>
-				<ul class="big-title">
+				<ul class="big-title" id="Application">
 					<li>
 						<p class="zhongwen">应用场景</p>
 						<p class="yingwen">Application Scenario</p>
@@ -254,29 +271,79 @@
 			<!-- 中间部分 -->
 			<!-- 底部部分 -->
 			<div class="bottom-area lo-ss over-h">
-				<img src="img/fanganbg.jpg"/>
+				<img src="img/fanganbg.jpg" />
 				<div class="bottom-area-content lo-ss">
 					<div class="bottom-img">
-						<img src="img/producta.png"/>
+						<img src="img/producta.png" />
 					</div>
 					<div class="bottom-txt">
-						<ul class="big-title">
+						<ul class="big-title" id="Industry">
 							<li>
-								<p class="zhongwen">应用场景</p>
-								<p class="yingwen">Application Scenario</p>
+								<p class="zhongwen">行业案例</p>
+								<p class="yingwen">Industry Case</p>
 							</li>
 						</ul>
-						<dl class="bottom-Article">
-							<dt>衢州雪亮工程</dt>
-							<dd>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</dd>
-							<dd>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</dd>
-							<dd>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</dd>
-						</dl>
+						<div class="swiper-container swiper-container-horizontal">
+							<div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px); ">
+								<div class="bottom-Article swiper-slide swiper-slide-active">
+									<div>衢州雪亮工程1</div>
+									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+								</div>
+								<div class="bottom-Article swiper-slide swiper-slide-next">
+									<div>衢州雪亮工程2</div>
+									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+								</div>
+								<div class="bottom-Article swiper-slide">
+									<div>衢州雪亮工程3</div>
+									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+								</div>
+								<div class="bottom-Article swiper-slide">
+									<div>衢州雪亮工程4</div>
+									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+								</div>
+								<div class="bottom-Article swiper-slide">
+									<div>衢州雪亮工程5</div>
+									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 			<!-- 底部部分 -->
 		</div>
+
+		<script src="js/jquery-2.1.0.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/swiper.min.inner.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript">
+			var swiper = new Swiper('.swiper-container', {
+				spaceBetween: 30,
+				centeredSlides: true,
+				autoplay: {
+					//这个时间是动画切换的时间
+					delay: 2000,
+					disableOnInteraction: false,
+				},
+				pagination: {
+					el: '.swiper-pagination',
+					clickable: true,
+				},
+				navigation: {
+					nextEl: '.swiper-button-next',
+					prevEl: '.swiper-button-prev',
+				},
+			});
+		</script>
 	</body>
 
 </html>
