修改轮播效果首页 2个产品页面

--- a/ProductPlan2.html
+++ b/ProductPlan2.html
@@ -6,7 +6,7 @@
 		<title>ALLWAY-Product2</title>
 		<link rel="stylesheet" type="text/css" href="css/ProductPlan2.css">
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
-		<link rel="stylesheet" type="text/css" href="css/swiper.min.inner.css"/>
+		<link rel="stylesheet" type="text/css" href="css/swiper.min.css" />
 	</head>
 
 	<body>
@@ -139,10 +139,10 @@
 
 			<!-- 底部部分 -->
 			<div class="bottom-area lo-ss over-h">
-				<img src="img/chanpinbg.png"/>
+				<img src="img/chanpinbg.png" />
 				<div class="bottom-area-content lo-ss">
 					<div class="bottom-img">
-						<img src="img/producta.png"/>
+						<img src="img/producta.png" />
 					</div>
 					<div class="bottom-txt">
 						<ul class="big-title" id="Application2">
@@ -161,55 +161,79 @@
 								<p class="yingwen">Industry Case</p>
 							</li>
 						</ul>
-						<div class="swiper-container swiper-container-horizontal">
+						<div class="swiper-container swiper-container-horizontal banner-swiper">
 							<div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px); ">
 								<div class="bottom-Article swiper-slide swiper-slide-active">
-									<div>领客汽车1</div>
-									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
-									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
-									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+									<div class="ddd-img">
+										<img src="img/producta.png" />
+									</div>
+									<div class="ddd">
+										<div>领客汽车1</div>
+										<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+										<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+										<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+									</div>
 								</div>
 								<div class="bottom-Article swiper-slide swiper-slide-next">
-									<div>领客汽车2</div>
-									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
-									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
-									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+									<div class="ddd-img">
+										<img src="img/producta.png" />
+									</div>
+									<div class="ddd">
+										<div>领客汽车2</div>
+										<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+										<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+										<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+									</div>
 								</div>
 								<div class="bottom-Article swiper-slide">
-									<div>领客汽车3</div>
-									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
-									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
-									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+									<div class="ddd-img">
+										<img src="img/producta.png" />
+									</div>
+									<div class="ddd">
+										<div>领客汽车3</div>
+										<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+										<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+										<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+									</div>
 								</div>
 								<div class="bottom-Article swiper-slide">
-									<div>领客汽车4</div>
-									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
-									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
-									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+									<div class="ddd-img">
+										<img src="img/producta.png" />
+									</div>
+									<div class="ddd">
+										<div>领客汽车4</div>
+										<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+										<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+										<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+									</div>
 								</div>
 								<div class="bottom-Article swiper-slide">
-									<div>领客汽车5</div>
-									<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
-									<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
-									<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+									<div class="ddd-img">
+										<img src="img/producta.png" />
+									</div>
+									<div class="ddd">
+										<div>领客汽车5</div>
+										<p>衢州市是全国第一批、浙江省首个“雪亮工程”全国示范城市。2017年1月，衢州市政府、数梦工场、奥维数据共同出资成立浙江衢时代大数据科技有限公司，并以此作为主体建设运营衢州雪亮工程。工程自2017年9月开工建设，于2018年7月通过初验，同年10月通过终验。工程建设完成后，公共安全视频统一调度能力提升3.1倍，市、县、乡三级综合指挥平台全面建成，并以信息化科技手段纵横贯通联接，构建区域治理大联动体系。</p>
+										<p>目前，浙江衢时代公司承建衢州市“雪亮工程”已形成“四网一大脑”的总体架构。“一大脑”即“城市数据大脑”，包括大数据运营平台、机器智能平台和数据资源平台，拥有全域感知能力、大规模实时视频计算能力、动态分布视频调度能力、跨摄像头融合计算能力和多维数据融合计算能力等五大能力。“四网”指的是互联网（互联网共享平台）、政务外网（综合中心平台）、视频专网（公共安全视频专网共享平台）和公安信息网（视频联网平台）。</p>
+										<p>2018年7月，全国政法综治智能化建设创新案例评选揭晓，“衢州市公共安全视频监控建设联网应用工程示范城市项目”被评为全国“雪亮工程”十大创新案例，并排名首位。在衢州召开的全国“雪亮工程”现场培训班、全省“雪亮工程”建设现场推进社会上，“雪亮工程”衢州样本得到中央综治办主任陈训秋、省委常委、政法委书记王昌荣等领导的充分肯定和高度评价。</p>
+									</div>
 								</div>
 							</div>
 						</div>
-						
-						
+
 					</div>
 				</div>
 			</div>
 			<!-- 底部部分 -->
 		</div>
-		
-		
+
 		<script src="js/jquery-2.1.0.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/swiper.min.inner.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/swiper.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			var swiper = new Swiper('.swiper-container', {
 				spaceBetween: 30,
 				centeredSlides: true,
+				loop: true,
 				autoplay: {
 					//这个时间是动画切换的时间
 					delay: 2000,
