--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 		<title>ALLWAY-Home</title>
 		<link rel="stylesheet" type="text/css" href="css/Home.css">
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
-		<link rel="stylesheet" type="text/css" href="css/swiper.min.inner.css" />
+		<link rel="stylesheet" type="text/css" href="css/swiper.min.css" />
 	</head>
 
 	<body>
@@ -51,18 +51,18 @@
 			<!-- 顶部主题部分 -->
 			<div class="top-area-title lo-ss over-h clear">
 				<div class="left-title left">
-					<div>
+					<a href="NewsInfo.html">
 						<p class="zhongwen">2018年12月14日与数梦工场的签约仪式</p>
 						<p class="yingwen">Signing Ceremony of Digital Dream Workshop on December 14,2018</p>
 						<span><img src="img/rightjian.png"/></span>
-					</div>
-					<div class="two-title">
+					</a>
+					<a class="two-title" href="NewsInfo.html">
 						<p class="zhongwen">数字化转型，</p>
 						<p class="zhongwen">为什么需用新型互联网构建“大中台”?</p>
 						<p class="yingwen">Digital transformation,</p>
 						<p class="yingwen">Why do we need to use the new Internet to build a "big platform"?</p>
 						<span><img src="img/rightjian.png"/></span>
-					</div>
+					</a>
 				</div>
 				<!-- 扇形部分 -->
 				<div class="right-title left clear">
@@ -81,56 +81,77 @@
 			<!-- 顶部主题部分 -->
 			<!-- 轮播 -->
 			<div class="banner lo-ss over-h">
-				<div class="banner-content clear">
-					<div class="banner-title left  swiper-container swiper-container-horizontal">
-						<p><a href="ProductPlan.html">产品方案</a></p>
-						<p><a href="ProductPlan.html">Product Solution</a></p>
-						<ul class="lunbo-txt swiper-wrapper" style="transform: translate3d(0px, 0px, 0px); ">
-							<li class="swiper-slide swiper-slide-active">
-								<p>衢州雪亮工程1</p>
-								<p>衢州市是全国第一批</p>
-								<p>浙江省首个“雪亮工程”全国示范城市</p>
-							</li>
-							<li class="swiper-slide swiper-slide-next">
-								<p>衢州雪亮工程2</p>
-								<p>衢州市是全国第一批</p>
-								<p>浙江省首个“雪亮工程”全国示范城市</p>
-							</li>
-							<li class="swiper-slide">
-								<p>衢州雪亮工程3</p>
-								<p>衢州市是全国第一批</p>
-								<p>浙江省首个“雪亮工程”全国示范城市</p>
-							</li>
-							<li class="swiper-slide">
-								<p>衢州雪亮工程4</p>
-								<p>衢州市是全国第一批</p>
-								<p>浙江省首个“雪亮工程”全国示范城市</p>
-							</li>
-							<li class="swiper-slide">
-								<p>衢州雪亮工程5</p>
-								<p>衢州市是全国第一批</p>
-								<p>浙江省首个“雪亮工程”全国示范城市</p>
-							</li>
-						</ul>
-						<div class="banner-span swiper-pagination swiper-pagination-clickable swiper-pagination-bullets">
-							<span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1"></span>
-							<span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span>
-							<span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 3"></span>
-							<span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span>
-							<span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 5"></span>
+				<div class="banner-content ">
+					<div class="banner-title ">
+						<p>
+							<a href="ProductPlan.html">产品方案</a>
+						</p>
+						<p>
+							<a href="ProductPlan.html">Product Solution</a>
+						</p>
+					</div>
+					<div class="banner-video  ">
+						<div class="swiper-container swiper-container-horizontal" id="swiper_container">
+							<div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px); ">
+								<div class="swiper-slide swiper-slide-active">
+									<div class="ddd">
+										<p>衢州雪亮工程1</p>
+										<p>衢州市是全国第一批</p>
+										<p>浙江省首个“雪亮工程”全国示范城市</p>
+									</div>
+									<div class="imgVideo">
+										<video src="img/video1.mp4" controls="controls"></video>
+									</div>
+								</div>
+								<div class="swiper-slide swiper-slide-next">
+									<div class="ddd">
+										<p>衢州雪亮工程2</p>
+										<p>衢州市是全国第一批</p>
+										<p>浙江省首个“雪亮工程”全国示范城市</p>
+									</div>
+									<div class="imgVideo">
+										<video src="img/video2.mp4" controls="controls"></video>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="ddd">
+										<p>衢州雪亮工程3</p>
+										<p>衢州市是全国第一批</p>
+										<p>浙江省首个“雪亮工程”全国示范城市</p>
+									</div>
+									<div class="imgVideo">
+										<img src="img/banner3.png" />
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="ddd">
+										<p>衢州雪亮工程4</p>
+										<p>衢州市是全国第一批</p>
+										<p>浙江省首个“雪亮工程”全国示范城市</p>
+									</div>
+									<div class="imgVideo">
+										<img src="img/banner4.png" />
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="ddd">
+										<p>衢州雪亮工程5</p>
+										<p>衢州市是全国第一批</p>
+										<p>浙江省首个“雪亮工程”全国示范城市</p>
+									</div>
+									<div class="imgVideo">
+										<img src="img/banner5.png">
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
-					<div class="banner-video left">
-						<div class="banner_img swiper-container swiper-container-horizontal">
-							<div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px); ">
-								<div class="swiper-slide swiper-slide-active"><img src="img/banner1.png"></div>
-								<div class="swiper-slide swiper-slide-next"><img src="img/banner2.png"></div>
-								<div class="swiper-slide"><img src="img/banner3.png" /></div>
-								<div class="swiper-slide"><img src="img/banner4.png" /></div>
-								<div class="swiper-slide"><img src="img/banner5.png"></div>
-							</div>
-							<!--<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>-->
-						</div>
+					<div class="banner-span swiper-pagination swiper-pagination-clickable swiper-pagination-bullets">
+						<span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1"></span>
+						<span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span>
+						<span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 3"></span>
+						<span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span>
+						<span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 5"></span>
 					</div>
 				</div>
 				<div class="banner-footer"></div>
@@ -166,13 +187,13 @@
 							<a href="NewsInfo.html">
 								<p>新闻动态</p>
 								<p>News</p>
-							</a>	
+							</a>
 						</li>
 						<li>
 							<a href="#">
 								<p>合作伙伴</p>
 								<p>Partner</p>
-							</a>	
+							</a>
 						</li>
 					</ul>
 					<div class="menu-list-item clear">
@@ -287,6 +308,36 @@
 									<p>Wuchan Zhongda Group</p>
 								</a>
 							</li>
+							<li>
+								<a href="http://www.wiseljz.com">
+									<p>维世（上海）投资发展有限公司</p>
+									<p>Wise(Shanghai)Investment and Development Co.,Ltd</p>
+								</a>
+							</li>
+							<li>
+								<a href="http://www.ctfo.com">
+									<p>北京千方集团有限公司</p>
+									<p>CHINA TRANSINFO</p>
+								</a>
+							</li>
+							<li>
+								<a href="http://www.10086.cn">
+									<p>中国移动</p>
+									<p>China Mobile</p>
+								</a>
+							</li>
+							<li>
+								<a href="http://www.xmzhongka.com">
+									<p>厦门中卡科技股份有限公司</p>
+									<p>Xiamen Zhongka Technology Co.,Ltd</p>
+								</a>
+							</li>
+							<li>
+								<a href="http://www.youthteamgroup.com">
+									<p>后生集团</p>
+									<p>Youth Team</p>
+								</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -296,25 +347,43 @@
 		<div class="bottom-area"></div>
 
 		<script src="js/jquery-2.1.0.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/swiper.min.inner.js" type="text/javascript" charset="utf-8"></script>
-		<script type="text/javascript">
-			var swiper = new Swiper('.swiper-container', {
-				spaceBetween: 30,
-				centeredSlides: true,
-				autoplay: {
-					//这个时间是动画切换的时间
-					delay: 2000,
-					disableOnInteraction: false,
-				},
-				pagination: {
-					el: '.swiper-pagination',
-					clickable: true,
-				},
-				navigation: {
-					nextEl: '.swiper-button-next',
-					prevEl: '.swiper-button-prev',
-				},
-			});
+		<script src="js/swiper.min.js" type="text/javascript" charset="utf-8"></script>
+		<script>
+			window.onload = function() {
+				var mySwiper = new Swiper('#swiper_container', {
+					spaceBetween: 30,
+					centeredSlides: true,
+					loop: true,
+					autoplay: {
+						delay: 1000,
+						disableOnInteraction: false,
+					},
+					pagination: {
+						el: '.swiper-pagination',
+						clickable: true,
+					},
+				});
+
+				mySwiper.el.onmouseenter = function() {
+					mySwiper.autoplay.stop();
+				}
+				mySwiper.el.onmouseleave = function() {
+					mySwiper.autoplay.start();
+				}
+
+				var vids = document.getElementsByTagName('video');
+				console.log(vids.length)
+
+				for(var i = 0; i < vids.length; i++) {
+					vids[i].onclick = function() {
+						if(this.paused) {
+							this.play();
+						} else {
+							this.pause();
+						}
+					}
+				}
+			}
 		</script>
 
 	</body>
