修改视频播放暂停的切换 新闻页面标题位置和链接的地方 产品页面视频和文字的样式

--- a/NewsDetail.html
+++ b/NewsDetail.html
@@ -34,14 +34,14 @@
 							</a>
 						</li>
 						<li class="menu-acticve">
-							<a href="NewsInfo.html#Company">
+							<a href="NewsInfo.html">
 								<p class="titlep">公司新闻</p>
 								<p class="titley">Company News</p>
 								<span></span>
 							</a>
 						</li>
 						<li class="menu-acticve">
-							<a href="NewsInfo.html#Industry">
+							<a href="NewsInfo.html">
 								<p class="titlep">行业新闻</p>
 								<p class="titley">Industry News</p>
 								<span></span>
