--- a/NewsInfo.html
+++ b/NewsInfo.html
@@ -168,7 +168,7 @@
 								</a>
 							</li>
 						</ul>
-						<ul  class="news2">
+						<ul  class="news2" style="display: none;">
 							<li>
 								<a href="NewsDetail.html">
 									<span></span>
