--- a/ProductPlan.html
+++ b/ProductPlan.html
@@ -284,7 +284,7 @@
 							<div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px); ">
 								<div class="bottom-Article swiper-slide swiper-slide-active clear">
 									<div class="bottom-img">
-										<img src="img/producta.png" />
+										<video src="img/video1.mp4" controls></video>
 									</div>
 									<div class="ddd">
 										<div>衢州雪亮工程1</div>
@@ -295,7 +295,7 @@
 								</div>
 								<div class="bottom-Article swiper-slide swiper-slide-next clear">
 									<div class="bottom-img">
-										<img src="img/producta.png" />
+										<img src="img/productb.png" />
 									</div>
 									<div class="ddd">
 										<div>衢州雪亮工程2</div>
@@ -306,7 +306,7 @@
 								</div>
 								<div class="bottom-Article swiper-slide">
 									<div class="bottom-img">
-										<img src="img/producta.png" />
+										<video src="img/video1.mp4" controls></video>
 									</div>
 									<div class="ddd">
 										<div>衢州雪亮工程3</div>
@@ -317,7 +317,7 @@
 								</div>
 								<div class="bottom-Article swiper-slide">
 									<div class="bottom-img">
-										<img src="img/producta.png" />
+										<img src="img/productb.png" />
 									</div>
 									<div class="ddd">
 										<div>衢州雪亮工程4</div>
@@ -328,7 +328,7 @@
 								</div>
 								<div class="bottom-Article swiper-slide">
 									<div class="bottom-img">
-										<img src="img/producta.png" />
+										<img src="img/productb.png" />
 									</div>
 									<div class="ddd">
 										<div>衢州雪亮工程5</div>
@@ -348,25 +348,45 @@
 		<script src="js/jquery-2.1.0.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/swiper.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			var swiper = new Swiper('.swiper-container', {
-				spaceBetween: 30,
-				centeredSlides: true,
-				loop: true,
-				autoplay: {
-					//这个时间是动画切换的时间
-					delay: 2000,
-					disableOnInteraction: false,
-				},
-				pagination: {
-					el: '.swiper-pagination',
-					clickable: true,
-				},
-			});
-			swiper.el.onmouseenter = function() {
-				swiper.autoplay.stop();
-			}
-			swiper.el.onmouseleave = function() {
-				swiper.autoplay.start();
+			window.onload = function() {
+				var swiper = new Swiper('.swiper-container', {
+					spaceBetween: 30,
+					centeredSlides: true,
+					loop: true,
+					autoplay: {
+						//这个时间是动画切换的时间
+						delay: 2000,
+						disableOnInteraction: false,
+					},
+					pagination: {
+						el: '.swiper-pagination',
+						clickable: true,
+					},
+				});
+				swiper.el.onmouseenter = function() {
+					swiper.autoplay.stop();
+				}
+				swiper.el.onmouseleave = function() {
+					swiper.autoplay.start();
+				}
+
+				var videos = document.getElementsByTagName('video');
+				//遍历所有video给其++事件监听，如果监听到play则执行pauseAll函数
+				for(var i = videos.length - 1; i >= 0; i--) {
+					(function() {
+						var p = i;
+						videos[p].addEventListener('play', function() {
+							pauseAll(p);
+						})
+					})()
+				}
+				//遍历video[j]，如果j和index不一样则暂停，如相等则不暂停
+				function pauseAll(index) {
+					for(var j = videos.length - 1; j >= 0; j--) {
+						if(j != index) videos[j].pause();
+					}
+				};
+
 			}
 		</script>
 	</body>
